packages/babel-core/test/fixtures/errors/error-config-function-more-frames/babel.config.js
module.exports = function myConfig() {
  g();
};

function f() {
  throw new Error("Error inside config!");
}

function g() {
  f();
}
